# Archivist-MCP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: quality-gates.yml
archivist_mcp/: __init__.py  config.py  db.py  errors.py  mcp_http_server.py  mcp_stdio_server.py  paths.py  sse_server.py  stdio_server.py  webui_server.py
archivist_mcp/indexing/: __init__.py  indexer.py  symbol_extractor.py
archivist_mcp/memory/: __init__.py  materializer.py
archivist_mcp/migrations/: runner.py
archivist_mcp/observability/: __init__.py  alerts.py  logging.py  metrics.py  rate_limit.py
archivist_mcp/reliability/: __init__.py  recovery.py
archivist_mcp/retrieval/: __init__.py  embeddings.py  hybrid.py
archivist_mcp/security/: __init__.py  input.py  redaction.py
archivist_mcp/storage/: __init__.py  repository.py
archivist_mcp/team/: __init__.py  auth.py
archivist_mcp/tooling/: __init__.py  errors.py  server.py
docs/: quickstart.md  recovery_runbook.md  security_threat_model.md  troubleshooting.md  upgrade_migration.md
scripts/: benchmark_retrieval.py  check_integrity.py  create_snapshot.py  export_audit_log.py  index_symbols.py  migrate.py  purge_observations.py  quality_gate.py  rebuild_index_and_embeddings.py  restore_snapshot.py  seed_retrieval_benchmark.py
tests/indexing/: __init__.py  test_index_command.py  test_indexer.py
tests/integration/: test_mcp_http_protocol.py  test_mcp_stdio_protocol.py  test_stdio_tools.py
tests/memory/: __init__.py  test_materializer.py
tests/observability/: test_alerts.py
tests/quality/: test_quality_gate.py
(+25 files in other folders)
